# kubeloom

./: .gitignore  CHANGELOG.md  README.md  debug_resources.py  debug_routes.py  pyproject.toml  release-please-config.json  test_table.py  tox.ini
.github/workflows/: ci.yml  release.yml
src/kubeloom/: __init__.py  _version.py  cli.py
src/kubeloom/analyzers/: __init__.py
src/kubeloom/cli/: __init__.py  commands.py  main.py
src/kubeloom/core/: __init__.py  interfaces.py
src/kubeloom/core/models/: __init__.py  actions.py  base.py  cluster.py  errors.py  sources.py  validation.py
src/kubeloom/core/services/: __init__.py  policy_analyzer.py
src/kubeloom/exporters/: __init__.py
src/kubeloom/k8s/: __init__.py  client.py
src/kubeloom/mesh/istio/: adapter.py  converter.py  detector.py  log_parser.py  tailer.py  weaver.py
src/kubeloom/tui/: __init__.py  app.py  app.tcss
src/kubeloom/tui/modals/: __init__.py  error_detail.py  policy_detail.py  resource_detail.py
src/kubeloom/tui/screens/: __init__.py  main.py  policy_detail.py
src/kubeloom/tui/tabs/: __init__.py  dashboard.py  mispicks.py  policies.py  resources.py
src/kubeloom/tui/theme/: __init__.py  dracula.py
src/kubeloom/tui/widgets/: __init__.py  namespace_selector.py  status_bar.py  tabs.py
src/kubeloom/utils/: __init__.py
tests/: __init__.py
tests/unit/: test_models.py
